updated contact edit page and fixed header title not showing up and updating

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -123,3 +123,10 @@
 .contact-detail-notes .item {
     border-top: none;
 }
+
+.input-header {
+    padding-left: 10px;
+    font-size: 16px;
+    font-weight: 400;   
+    padding-bottom: 10px;
+}
